updated .isEmpty() string checks to .isBlank() and split test childRelatedIndexUpdatesWhenCommaSeparatedFieldChanges() into 2 separate tests as childIsIndexedUnderEachKeyInCommaSeparatedField and changingOneKeyInCommaSeparatedFieldUpdatesIndex